<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lyContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="@dimen/size_130"
        android:layout_margin="@dimen/size_10"
        android:background="@drawable/shape_solid_round_primary"
        android:orientation="vertical"
        android:paddingTop="@dimen/size_10">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/size_10"
            android:scrollbars="none">

            <TextView
                android:id="@+id/tv_msg"
                style="@style/textView"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingStart="@dimen/size_10"
                android:paddingEnd="@dimen/size_10"
                android:text="MSG"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </ScrollView>

        <LinearLayout
            android:id="@+id/lyDontShowAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="gone"
            tools:visibility="visible"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chkDontShowAgain"
                android:buttonTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvDontShowAgain"
                style="@style/textView"
                android:text="@string/dontShowAgain"
                android:textColor="@color/white"
                android:textSize="@dimen/font_11" />

        </LinearLayout>

        <View
            style="@style/horizontal_line"
            android:layout_marginStart="@dimen/size_2"
            android:layout_marginEnd="@dimen/size_2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_btn1"
                style="@style/textView"
                android:gravity="center"
                android:minWidth="@dimen/size_80"
                android:minHeight="@dimen/size_30"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="@dimen/font_13"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible"
                />


            <TextView
                android:id="@+id/tv_btn2"
                style="@style/textView"
                android:gravity="center"
                android:minWidth="@dimen/size_80"
                android:minHeight="@dimen/size_30"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textSize="@dimen/font_13"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible"
                />

            <TextView
                android:id="@+id/tv_btn3"
                style="@style/textView"
                android:gravity="center"
                android:minWidth="@dimen/size_80"
                android:minHeight="@dimen/size_30"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/font_13"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible"
                />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>