<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- R -->
        <TableRow android:gravity="center_vertical">

            <TextView
                style="@style/textView.noPadding"
                android:text="@string/Red" />

            <SeekBar
                android:id="@+id/redValueSeekBar"
                android:layout_weight="1"
                android:max="255"
                android:min="0"
                android:progress="127"
                android:progressTint="#7f0000"
                android:thumbTint="#7f0000" />

            <EditText
                android:id="@+id/redValueEt"
                style="@style/editText.frameGray"
                android:layout_width="@dimen/size_50"
                android:layout_height="@dimen/size_25"
                android:layout_marginStart="@dimen/size_10"
                android:gravity="center"
                android:inputType="number"
                android:paddingTop="@dimen/size_0"
                android:paddingBottom="@dimen/size_0"
                android:selectAllOnFocus="true"
                android:text="127" />
        </TableRow>

        <!-- G -->
        <TableRow
            android:layout_marginTop="@dimen/size_6"
            android:gravity="center_vertical">

            <TextView
                style="@style/textView.noPadding"
                android:text="@string/Green" />

            <SeekBar
                android:id="@+id/greenValueSeekBar"
                android:layout_weight="1"
                android:max="255"
                android:min="0"
                android:progress="127"
                android:progressTint="#007f00"
                android:thumbTint="#007f00" />

            <EditText
                android:id="@+id/greenValueEt"
                style="@style/editText.frameGray"
                android:layout_width="@dimen/size_50"
                android:layout_height="@dimen/size_25"
                android:layout_marginStart="@dimen/size_10"
                android:gravity="center"
                android:inputType="number"
                android:paddingTop="@dimen/size_0"
                android:paddingBottom="@dimen/size_0"
                android:selectAllOnFocus="true"
                android:text="127" />
        </TableRow>

        <!-- B -->
        <TableRow
            android:layout_marginTop="@dimen/size_6"
            android:gravity="center_vertical">

            <TextView
                style="@style/textView.noPadding"
                android:text="@string/Blue" />

            <SeekBar
                android:id="@+id/blueValueSeekBar"
                android:layout_weight="1"
                android:max="255"
                android:min="0"
                android:progress="127"
                android:progressTint="#00007f"
                android:thumbTint="#00007f" />

            <EditText
                android:id="@+id/blueValueEt"
                style="@style/editText.frameGray"
                android:layout_width="@dimen/size_50"
                android:layout_height="@dimen/size_25"
                android:layout_marginStart="@dimen/size_10"
                android:gravity="center"
                android:inputType="number"
                android:paddingTop="@dimen/size_0"
                android:paddingBottom="@dimen/size_0"
                android:selectAllOnFocus="true"
                android:text="127" />
        </TableRow>

        <!-- Alpha -->
        <TableRow
            android:layout_marginTop="@dimen/size_6"
            android:gravity="center_vertical">

            <TextView
                style="@style/textView.noPadding"
                android:text="@string/Alpha" />

            <SeekBar
                android:id="@+id/alphaValueSeekBar"
                android:layout_weight="1"
                android:max="255"
                android:min="0"
                android:progress="255"
                android:progressTint="#007f7f7f"
                android:thumbTint="#000000" />

            <EditText
                android:id="@+id/alphaValueEt"
                style="@style/editText.frameGray"
                android:layout_width="@dimen/size_50"
                android:layout_height="@dimen/size_25"
                android:layout_marginStart="@dimen/size_10"
                android:gravity="center"
                android:inputType="number"
                android:paddingTop="@dimen/size_0"
                android:paddingBottom="@dimen/size_0"
                android:selectAllOnFocus="true"
                android:text="255" />
        </TableRow>

    </TableLayout>

    <!-- Hex -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_6"
        android:gravity="center_vertical">

        <TextView
            style="@style/textView.noPadding"
            android:text="@string/Hex" />

        <View
            android:layout_width="@dimen/size_25"
            android:layout_height="@dimen/size_1" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_25"
            android:layout_weight="1">

            <EditText
                android:id="@+id/hexValueEt"
                style="@style/editText.frameGray"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:inputType=""
                android:maxLines="1"
                android:gravity="center"
                android:paddingTop="@dimen/size_0"
                android:paddingBottom="@dimen/size_0"
                android:selectAllOnFocus="true"
                android:text="ff7f7f7f"
                android:textAllCaps="true" />

            <TextView
                style="@style/textView.noPadding"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/size_10"
                android:text="#"
                android:textColor="@color/gray3" />
        </FrameLayout>

        <View
            android:layout_width="@dimen/size_25"
            android:layout_height="@dimen/size_1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/colorPreviewCardContainer"
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_25"
            >
            <!--app:cardBackgroundColor="#39AFAEAE"
            app:cardCornerRadius="@dimen/size_10"
            app:cardElevation="0dp">-->

            <androidx.cardview.widget.CardView
                android:id="@+id/colorPreviewCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/size_1"
                app:cardBackgroundColor="#39AFAEAE"/>
                <!--app:cardBackgroundColor="#ff7f7f7f"
                app:cardCornerRadius="@dimen/size_10"
                app:cardElevation="0dp" />-->
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- colors -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/colorsRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5"
        tools:listitem="@layout/adapter_colors" />

    <!-- recent colors -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recentColorsRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5"
        tools:listitem="@layout/adapter_colors2" />

</LinearLayout>

